--- a/app/src/main/res/layout/item_attachment.xml
+++ b/app/src/main/res/layout/item_attachment.xml
@@ -8,14 +8,21 @@
 
     <RelativeLayout
         android:id="@+id/rl_container"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_margin="20dp">
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+   android:layout_marginBottom="20dp" >
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/attachment_cover"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:src="@mipmap/client_01"
             android:layout_centerHorizontal="true" />
 
         <TextView
@@ -25,9 +32,10 @@
             android:layout_below="@id/attachment_cover"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp"
-            android:singleLine="true"
+            android:gravity="center"
             android:textColor="@color/black"
             android:textSize="12sp" />
+        </RelativeLayout>
     </RelativeLayout>
 
     <TextView
