--- a/app/src/main/res/drawable/botton_danlan.xml
+++ b/app/src/main/res/drawable/botton_danlan.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#93c2f8"/>
+    <solid android:color="@color/blue_0096FE"/>
          <corners
              android:topLeftRadius="50dip"
              android:topRightRadius="50dip"
