--- a/app/src/main/res/layout/item_attachment.xml
+++ b/app/src/main/res/layout/item_attachment.xml
@@ -10,39 +10,44 @@
         android:id="@+id/rl_container"
         android:layout_width="100dp"
         android:layout_height="100dp"
-   android:layout_marginBottom="20dp" >
+        android:layout_marginBottom="20dp">
+
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/attachment_cover"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@mipmap/client_01"
-            android:layout_centerHorizontal="true" />
-
-        <TextView
-            android:id="@+id/attachment_name"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/attachment_cover"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="5dp"
             android:gravity="center"
-            android:textColor="@color/black"
-            android:textSize="12sp" />
+            android:layout_centerInParent="true"
+           >
+
+            <ImageView
+                android:id="@+id/attachment_cover"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_centerHorizontal="true" />
+
+            <TextView
+                android:id="@+id/attachment_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/attachment_cover"
+                android:singleLine="true"
+                tools:text="sdfdssdfdssdfdssdfds"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="5dp"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
         </RelativeLayout>
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:textColor="@color/black" />
+        android:id="@+id/tv_subTitle"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:gravity="center_vertical"
+        android:padding="10dp"
+        android:textColor="@color/black"
+        android:visibility="gone" />
 
     <View
         android:layout_width="wrap_content"
