--- a/app/src/main/res/layout/item_notice.xml
+++ b/app/src/main/res/layout/item_notice.xml
@@ -5,24 +5,26 @@
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:orientation="vertical"
+    android:paddingBottom="10dp"
+    android:paddingTop="10dp"
     tools:ignore="MissingDefaultResource">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_marginRight="20dp"
         android:gravity="center"
         android:orientation="horizontal"
-        android:paddingLeft="15dp">
+        android:padding="15dp">
 
         <View
             android:id="@+id/tv_todoCount"
-            android:layout_width="10dp"
-            android:layout_height="10dp"
+            android:layout_width="5dp"
+            android:layout_height="5dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
             android:layout_marginRight="10dp"
-            android:background="@drawable/textcolor_blue"
+            android:background="@drawable/textcolor_gray"
             android:text="4"
             android:textColor="#ffffff"
             android:textSize="11sp" />
@@ -45,9 +47,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="sdhshd"
-        android:textColor="#2e2e2e"
+        android:textColor="@color/gray_999999"
         android:textSize="12sp" />
 
 </LinearLayout>
