--- a/commonbase/src/main/res/layout/adapter_bottom_gridrview.xml
+++ b/commonbase/src/main/res/layout/adapter_bottom_gridrview.xml
@@ -4,15 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:orientation="vertical">
+
+
+    <ImageView
+        android:id="@+id/iv_cover"
+        android:layout_width="50dp"
+        android:layout_height="50dp" />
 
     <TextView
         android:id="@+id/tvContent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:gravity="center"
-        android:padding="10dp"
+        android:text=" sdsd"
         android:textColor="@color/black_666666"
         android:textSize="16dp" />
 </LinearLayout>
