--- a/app/src/main/res/layout/fragment_business.xml
+++ b/app/src/main/res/layout/fragment_business.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,27 +8,22 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
-           <LinearLayout
-               android:layout_width="match_parent"
-               android:layout_height="30dp">
-               <TextView
-                   android:layout_width="wrap_content"
-                   android:layout_height="30dp"
-                   android:text="业务"
-                   android:textSize="22sp"
-                   android:layout_marginLeft="150dp"
-                  android:layout_marginTop="5dp"
-                   android:textColor="#212121"
-                   />
+            android:orientation="vertical">
 
-           </LinearLayout>
+            <hxz.www.commonbase.view.KLToolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="visible"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tb_title="业务" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -44,12 +40,12 @@
                     android:layout_marginTop="15dp"
                     android:src="@mipmap/banner" />
             </LinearLayout>
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_tab"
-            android:layout_width="match_parent"
-                android:layout_margin="10dp"
-            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
-
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"></android.support.v7.widget.RecyclerView>
 
 
         </LinearLayout>
