--- a/app/src/main/res/layout/layout_report.xml
+++ b/app/src/main/res/layout/layout_report.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:padding="15dp"
     android:background="@color/white"
     android:gravity="center"
@@ -21,7 +22,6 @@
         android:layout_weight="1"
         android:id="@+id/tv_reportValue"
         android:textSize="13sp"
-        android:singleLine="true"
         android:gravity="right"
         android:textColor="@color/orange_FFB000"
         android:layout_alignParentRight="true"
